--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,34 @@
 {
   "name": "Send to Nethloader",
-  "version": "1.0.0",
   "description": "Upload any image from your browser to Nethloader.",
-  "options_page": "options/options.html",
+  "author": "Nethruster",
+  "version": "1.0.0",
+  "manifest_version": 2,
   "background": {
-    "page": "contextMenu.html",
-    "persistent": false
-  },
-  "icons": {
-    "16": "/img/icons/favicon-16x16.png",
-    "32": "/img/icons/favicon-32x32.png",
-    "48": "/img/icons/favicon-48x48.png",
-    "128": "/img/icons/favicon-128x128.png"
-  },
-  "permissions": [
-    "*://*/*",
-    "storage",
-    "contextMenus",
-    "clipboardWrite",
-    "notifications"
-  ],
-  "browser_action": {
-    "default_popup": "options/options.html"
-  },
-  "manifest_version": 2
+        "page": "contextMenu.html",
+        "persistent": false
+    },
+    "browser_action": {
+        "default_popup": "options/options.html",
+        "default_icon": "/img/icons/favicon-32x32.png"
+    },
+    "icons": {
+        "16": "/img/icons/favicon-16x16.png",
+        "32": "/img/icons/favicon-32x32.png",
+        "48": "/img/icons/favicon-48x48.png",
+        "128": "/img/icons/favicon-128x128.png"
+    },
+    "options_page": "options/options.html",
+    "permissions": [
+        "*://*/*",
+        "storage",
+        "contextMenus",
+        "clipboardWrite",
+        "notifications",
+        "tabs"
+    ],
+    "-ms-preload": {
+        "backgroundScript": "backgroundScriptsAPIBridge.js",
+        "contentScript": "contentScriptsAPIBridge.js"
+    }
 }
